--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>full screen iframe</title>
+	<title>replBook</title>
 	<style type="text/css">
 		html {
 			overflow: auto;
